fixes bug 226612 "-remote openURL no longer works with null URL." r=bryner sr=dbaron a=brendan